Update README, Optimize benchmark settings